// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BibTeX Parser should parse thesis zotero entries always create @phdthesis bibtex entries #307-export to an AST 1`] = `
Object {
  "children": Array [
    Object {
      "id": "Woller2011DetMultiple",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 8,
          "offset": 211,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Array [
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 73,
            },
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 40,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 33,
                  "line": 2,
                  "offset": 70,
                },
                "start": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 50,
                },
              },
              "value": "Wøller, Sune Brøndum",
            },
          ],
        },
        Object {
          "key": "date",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 4,
              "offset": 90,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 73,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 3,
                  "offset": 87,
                },
                "start": Object {
                  "column": 11,
                  "line": 3,
                  "offset": 83,
                },
              },
              "value": "2011",
            },
          ],
        },
        Object {
          "key": "langid",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 5,
              "offset": 110,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 90,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 18,
                  "line": 4,
                  "offset": 107,
                },
                "start": Object {
                  "column": 13,
                  "line": 4,
                  "offset": 102,
                },
              },
              "value": "norsk",
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 208,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 110,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 97,
                  "line": 5,
                  "offset": 206,
                },
                "start": Object {
                  "column": 12,
                  "line": 5,
                  "offset": 121,
                },
              },
              "value": "Det multiple arkæologiske objekt. Et studie af materialitet og arkæologiske tekstiler",
            },
          ],
        },
      ],
      "type": "mastersthesis",
    },
    Object {
      "id": "Woller2011CTRDet",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 14,
          "offset": 416,
        },
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 211,
        },
      },
      "properties": Array [
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 10,
              "offset": 275,
            },
            "start": Object {
              "column": 3,
              "line": 9,
              "offset": 242,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 33,
                  "line": 9,
                  "offset": 272,
                },
                "start": Object {
                  "column": 13,
                  "line": 9,
                  "offset": 252,
                },
              },
              "value": "Wøller, Sune Brøndum",
            },
          ],
        },
        Object {
          "key": "date",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 11,
              "offset": 292,
            },
            "start": Object {
              "column": 1,
              "line": 10,
              "offset": 275,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 10,
                  "offset": 289,
                },
                "start": Object {
                  "column": 11,
                  "line": 10,
                  "offset": 285,
                },
              },
              "value": "2011",
            },
          ],
        },
        Object {
          "key": "langid",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 12,
              "offset": 312,
            },
            "start": Object {
              "column": 1,
              "line": 11,
              "offset": 292,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 18,
                  "line": 11,
                  "offset": 309,
                },
                "start": Object {
                  "column": 13,
                  "line": 11,
                  "offset": 304,
                },
              },
              "value": "norsk",
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 13,
              "offset": 414,
            },
            "start": Object {
              "column": 1,
              "line": 12,
              "offset": 312,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 101,
                  "line": 12,
                  "offset": 412,
                },
                "start": Object {
                  "column": 12,
                  "line": 12,
                  "offset": 323,
                },
              },
              "value": "CTR Det multiple arkæologiske objekt. Et studie af materialitet og arkæologiske tekstiler",
            },
          ],
        },
      ],
      "type": "phdthesis",
    },
  ],
  "kind": "File",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 14,
      "offset": 416,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
}
`;

exports[`BibTeX Parser should parse thesis zotero entries always create @phdthesis bibtex entries #307-export to an AST 2`] = `
Object {
  "children": Array [
    Object {
      "id": "Woller2011DetMultiple",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 8,
          "offset": 215,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "properties": Array [
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 3,
              "offset": 73,
            },
            "start": Object {
              "column": 3,
              "line": 2,
              "offset": 40,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 33,
                  "line": 2,
                  "offset": 70,
                },
                "start": Object {
                  "column": 13,
                  "line": 2,
                  "offset": 50,
                },
              },
              "value": "Wøller, Sune Brøndum",
            },
          ],
        },
        Object {
          "key": "language",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 4,
              "offset": 95,
            },
            "start": Object {
              "column": 1,
              "line": 3,
              "offset": 73,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 3,
                  "offset": 92,
                },
                "start": Object {
                  "column": 15,
                  "line": 3,
                  "offset": 87,
                },
              },
              "value": "norsk",
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 5,
              "offset": 196,
            },
            "start": Object {
              "column": 1,
              "line": 4,
              "offset": 95,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 99,
                  "line": 4,
                  "offset": 193,
                },
                "start": Object {
                  "column": 12,
                  "line": 4,
                  "offset": 106,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 98,
                      "line": 4,
                      "offset": 192,
                    },
                    "start": Object {
                      "column": 13,
                      "line": 4,
                      "offset": 107,
                    },
                  },
                  "value": "Det multiple arkæologiske objekt. Et studie af materialitet og arkæologiske tekstiler",
                },
              ],
            },
          ],
        },
        Object {
          "key": "year",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 6,
              "offset": 212,
            },
            "start": Object {
              "column": 1,
              "line": 5,
              "offset": 196,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 5,
                  "offset": 210,
                },
                "start": Object {
                  "column": 11,
                  "line": 5,
                  "offset": 206,
                },
              },
              "value": "2011",
            },
          ],
        },
      ],
      "type": "mastersthesis",
    },
    Object {
      "id": "Woller2011CTRDet",
      "kind": "Entry",
      "loc": Object {
        "end": Object {
          "column": 1,
          "line": 14,
          "offset": 424,
        },
        "start": Object {
          "column": 1,
          "line": 8,
          "offset": 215,
        },
      },
      "properties": Array [
        Object {
          "key": "author",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 10,
              "offset": 279,
            },
            "start": Object {
              "column": 3,
              "line": 9,
              "offset": 246,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 33,
                  "line": 9,
                  "offset": 276,
                },
                "start": Object {
                  "column": 13,
                  "line": 9,
                  "offset": 256,
                },
              },
              "value": "Wøller, Sune Brøndum",
            },
          ],
        },
        Object {
          "key": "language",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 11,
              "offset": 301,
            },
            "start": Object {
              "column": 1,
              "line": 10,
              "offset": 279,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 10,
                  "offset": 298,
                },
                "start": Object {
                  "column": 15,
                  "line": 10,
                  "offset": 293,
                },
              },
              "value": "norsk",
            },
          ],
        },
        Object {
          "key": "title",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 12,
              "offset": 406,
            },
            "start": Object {
              "column": 1,
              "line": 11,
              "offset": 301,
            },
          },
          "value": Array [
            Object {
              "kind": "NestedLiteral",
              "loc": Object {
                "end": Object {
                  "column": 103,
                  "line": 11,
                  "offset": 403,
                },
                "start": Object {
                  "column": 12,
                  "line": 11,
                  "offset": 312,
                },
              },
              "value": Array [
                Object {
                  "kind": "Text",
                  "loc": Object {
                    "end": Object {
                      "column": 102,
                      "line": 11,
                      "offset": 402,
                    },
                    "start": Object {
                      "column": 13,
                      "line": 11,
                      "offset": 313,
                    },
                  },
                  "value": "CTR Det multiple arkæologiske objekt. Et studie af materialitet og arkæologiske tekstiler",
                },
              ],
            },
          ],
        },
        Object {
          "key": "year",
          "kind": "Property",
          "loc": Object {
            "end": Object {
              "column": 1,
              "line": 13,
              "offset": 422,
            },
            "start": Object {
              "column": 1,
              "line": 12,
              "offset": 406,
            },
          },
          "value": Array [
            Object {
              "kind": "Text",
              "loc": Object {
                "end": Object {
                  "column": 15,
                  "line": 12,
                  "offset": 420,
                },
                "start": Object {
                  "column": 11,
                  "line": 12,
                  "offset": 416,
                },
              },
              "value": "2011",
            },
          ],
        },
      ],
      "type": "phdthesis",
    },
  ],
  "kind": "File",
  "loc": Object {
    "end": Object {
      "column": 1,
      "line": 14,
      "offset": 424,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
}
`;
